# BeikeCrawlerMap

./: .gitignore  api.py  docker-compose.yml  main.py  pyproject.toml  test.py
backend/: Dockerfile  city_list.py  main.py  requirements.txt  test.py
backend/data/: beike_house.db  city_list.json
backend/spider/: __init__.py  constant.py  database.py  models.py  spider.py  utils.py
config/: progress.json
data/: community.json  community1.json  community2.json  community3.json  community4.json  community5.json  community6.json  community7.json  community8.json  community9.json  districts.json  housing_data.db  progress.json
frontend/: Dockerfile  main.py
frontend/st_pages/: analysis.py  login.py  monitor.py
spider/: models.py  spider.py  utils.py
st_pages/: login.py  monitor.py  spider.py
